--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
    justify-content: center;
    align-items: center;
    margin: 0;   
+   background-image: url("Pics/stars2.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 
@@ -41,6 +44,7 @@ body {
     left: 400px;
     top: 200px;
     box-shadow: 2px 2px 20px 3px black;
+    border-radius: 10px 0px 0px 10px;
 }
 
 #right {
@@ -51,6 +55,7 @@ body {
     right: 320px;
     top: 200px;
     box-shadow: 0px 0px 20px 3px black;
+    border-radius: 0px 10px 10px 0px;
 }
 
 .left-a {
